fix:overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,9 @@
     justify-content: center;
     align-items: center;
     }
-    
+    body{
+        overflow-x: hidden;
+    }
    
 
 }
